--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
-- pip:
-  - natsort==5.1.0
-  - oauthlib==2.0.4
-  - paramiko==2.3.1
-  - pysftp==0.2.9
-  - requests-oauthlib==0.8.0
+atomicwrites==1.1.5
+attrs==18.1.0
+beautifulsoup4==4.6.3
+bs4==0.0.1
+certifi==2018.8.13
+chardet==3.0.4
+colorama==0.3.9
+idna==2.7
+more-itertools==4.3.0
+oauthlib==2.1.0
+pluggy==0.7.1
+py==1.5.4
+pytest==3.7.1
+requests==2.19.1
+requests-oauthlib==1.0.0
+six==1.11.0
+urllib3==1.23
+wincertstore==0.2
