--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ bs4==0.0.1
 certifi==2018.8.13
 chardet==3.0.4
 colorama==0.3.9
+html5lib==1.0.1
 idna==2.7
 more-itertools==4.3.0
 oauthlib==2.1.0
@@ -15,4 +16,5 @@ requests==2.19.1
 requests-oauthlib==1.0.0
 six==1.11.0
 urllib3==1.23
+webencodings==0.5.1
 wincertstore==0.2
