--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
+cache:
+  directories:
+  - .cachedata
 script:
-  - pytest
+  - tests/test_login.py
 
