--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ cache: pip
 script:
   - git clone https://github.com/digikey/digikey-kicad-library.git .cachedata/digikey-kicad-library
   - python test_login.py
+  - git status
 
