--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ colorama==0.3.9
 html5lib==1.0.1
 idna==2.7
 more-itertools==4.3.0
+natsort==5.4.1
 oauthlib==2.1.0
 pluggy==0.7.1
 py==1.5.4
+pyparsing==2.2.2
 pytest==3.7.1
 requests==2.19.1
 requests-oauthlib==1.0.0
